  clipped to screen. (RFB)

2014-11-10
- bios/fnt_st_6x6.c: Restored original English 6x6 system font: all standard
  ST glyphs are now available. (RFB)

2014-11-11
- desk/deskwin.c: Increase horizontal spacing for window icons in low,
  medium, & double-line resolutions. (RFB)
- desk/deskapp.c desk/deskbind.h desk/deskwin.c: Use common definitions
  for both window & desktop icon spacing. (RFB)
- desk/deskapp.c: Simplify calculation of desktop icon spacing. (RFB)
- desk/deskmain.c desk/desksupp.c desk/desksupp.h: Fix bug: window was not
  redrawn if displaying icons AND it was shrunk by the fuller gadget AND
  the number of columns to display changed. (RFB)

2014-11-14
- printbss.sh: Align numbers on right. (VRI)

2014-11-17
- bios/screen.c bios/screen.h: Fixed warning on non-shifter targets. (VRI)
- bios/ide.c: Fixed warning on m548x. (VRI)
- Makefile: Renamed "m548x-bas_gcc" to "m548xbas". (VRI)
- release.mk doc/readme-m548xbas.txt: Added m548xbas to official binaries. (VRI)

2014-11-19
- desk/deskdir.c: Code cleanup: made some functions static. (RFB)
- desk/deskdir.c desk/deskdir.h desk/deskfun.c: Code cleanup: moved two
  functions & made them static. (RFB)
- desk/deskdir.c: Fix bug: if a filename conflict occurred when moving a file,
  and the user cancelled the move, the original was still deleted. (RFB)

2014-11-20
- po/de.po: Updated German translations. (THH)

2014-11-22
- tools/erd.c: Added missing const. (VRI)

2014-11-24
- bios/floppy.c: Fix bug: if there was no diskette in a floppy drive,
  selecting it would cause the drive motor to remain on. (RFB)

2014-11-28
- bdos/fs.h bdos/fsdir.c bdos/proc.c: Fix regression caused by fsdir.c
  update of 2014-03-03: a DND pointed to by the DTA could be reused while
  still in use. (RFB)

2014-11-29
- aes/gemfslib.c: Fix loop in file selector when initial path did not start
  with drive or backslash. (RFB)
- aes/gemfslib.c: Preserve filemask in file selector when changing drives. (RFB)